--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <ul class="nav-items" id="nav-items">
             <li class="nav-item"><span><a href="#banner">Home</a></span></li>
             <li class="nav-item"><span><a href="#latest-news">Latest News</a></span></li>
-            <li class="nav-item"><span><a href="/archives.html">Archives</a></span></li>
-            <li class="nav-item"><span><a href="/contactus.html">Contact us</a></span></li>
+            <li class="nav-item"><span><a href="archives.html">Archives</a></span></li>
+            <li class="nav-item"><span><a href="contactus.html">Contact us</a></span></li>
         </ul>
     </nav>
     <div class="banner" id="banner">
