--- a/contactus.html
+++ b/contactus.html
@@ -14,10 +14,10 @@
     
     <nav class="nav-bar" id="nav-bar">
         <ul class="nav-items" id="nav-items">
-            <li class="nav-item"><span><a href="/index.html">Home</a></span></li>
-            <li class="nav-item"><span><a href="/index.html">Latest News</a></span></li>
-            <li class="nav-item"><span><a href="/archives.html">Archives</a></span></li>
-            <li class="nav-item"><span><a href="/contactus.html">Contact us</a></span></li>
+            <li class="nav-item"><span><a href="./index.html">Home</a></span></li>
+            <li class="nav-item"><span><a href="./index.html">Latest News</a></span></li>
+            <li class="nav-item"><span><a href="./archives.html">Archives</a></span></li>
+            <li class="nav-item"><span><a href=".contactus.html">Contact us</a></span></li>
         </ul>
     </nav>
     <div class="banner" id="banner">
