--- a/testinomy.html
+++ b/testinomy.html
@@ -26,24 +26,12 @@
     </div>
     <div class="main-container">
         <article class="article-container" id="latest-news">
-            <h1>The Dark web</h1>
-            <h3>What is the dark web</h3>
-            <p>The dark web, a clandestine realm of the internet hidden from conventional search engines, serves as a platform with a dual nature—veiled in anonymity and often associated with illicit activities, yet harboring potential for constructive purposes. Beneath the surface of this encrypted network, individuals seek privacy and security, navigating away from traditional surveillance. While the dark web has gained notoriety for illegal transactions, it also facilitates whistleblowing and protects freedom of speech for those in oppressive regimes. Additionally, the dark web provides a space for cybersecurity professionals to exchange information on emerging threats, contributing to the enhancement of online defenses. In acknowledging its dual facets, the dark web prompts a nuanced conversation about balancing security concerns with the potential for positive, covert exchanges in the digital realm.</p>
-            <h3>Acces safely the dark web</h3>
-            <p>The dark web is actually quite easy to access on most OSs. The first step is to download the <a class="ahrefs" href="https://www.torproject.org/fr/thank-you/">Tor browser</a>. This browser will connect you to the darkweb network where your internet traffic will be encrypted</p>
-            <p>However it does not mean that it is 100% safe. Indeed your internet traffic will remain "visible" between your device and the first tor router that performs the encryption and forward your traffic to the dark web network</p>
-            <p>You may want to add some layers of security such as :</p>
-            <ul>
-                <li>Enabeling the advanced security option in the tor browser</li>
-                <li>Using a VPN to hide your tor initial request</li>
-                <li>Surfing from a <a class="ahrefs" href="https://tails.net/install/index.fr.html">linux tail OS</a> and add the two previous layers of security</li>
-            </ul>
-            <h3>Reach out to us</h3>
-            <p>On this website you will find informations and articles about the dark web as well as informations about how to access plateforme on the dark web. Over there you will get to address your testimony in security</p>
-            <p>Dark web plateforme : http://kneat2dj5vk7zbpiovftwrdtovlhboj6mzhbbpslbv6ctaog3tv75myd.onion</p>
-            <p>Darl wb key : QXFIGHKCQ557R47DYU5BHNEXI75U36Q2VVFCM5JTQ7GOY5KYUH4Q</p>
+            <h1>Who are we</h1>
+            <p>Introducing "Testimony," a pioneering service tailored for the discerning denizens of the digital shadows. At Testimony, we present a cutting-edge platform on the dark web, offering an exclusive space for users to make anonymous alert calls under the cloak of absolute confidentiality. Our secure channels ensure users can share their truths without fear of exposure or compromise.</p>
+            <p>Beyond our anonymous alert service, Testimony is dedicated to illuminating the mysterious realm of the dark web. Immerse yourself in our comprehensive documentation, meticulously curated to educate users about the intricacies of this covert domain. From mastering encrypted communications to navigating the concealed corners of the internet, Testimony's educational resources empower users with the knowledge to traverse the digital shadows securely.</p>
         </article>
     </div>
+
     <div class="footer" id="footer">
         <div class="contact-container">
             <p>Marius Jauffret - mariusjauffret@webster.edu</p>
