--- a/contactus.html
+++ b/contactus.html
@@ -15,18 +15,18 @@
     <nav class="nav-bar" id="nav-bar">
         <ul class="nav-items" id="nav-items">
             <li class="nav-item"><span><a href="./index.html">Home</a></span></li>
-            <li class="nav-item"><span><a href="./index.html">Latest News</a></span></li>
-            <li class="nav-item"><span><a href="./archives.html">Archives</a></span></li>
-            <li class="nav-item"><span><a href=".contactus.html">Contact us</a></span></li>
+            <li class="nav-item"><span><a href="./archives.html">Articles</a></span></li>
+            <li class="nav-item"><span><a href="./testinomy.html">__Tesitmony</a></span></li>
+            <li class="nav-item"><span><a href="./contactus.html">Our staff</a></span></li>
         </ul>
     </nav>
     <div class="banner" id="banner">
         <img class="banner-img">
-        <h1 class="banner-title">Cyber News</h1>
+        <h1 class="banner-title">__Testimony</h1>
     </div>
     <div class="main-container">
         <div class="weknowyou">
-            <h3>You don't know us but we already know you</h3>
+            <h3>You don't know us but we already know you, the surface Internet isn't safe</h3>
             <p id="ipv4"></p>
             <p id="ipv6"></p>
         </div>
