--- a/index.html
+++ b/index.html
@@ -14,23 +14,36 @@
     
     <nav class="nav-bar" id="nav-bar">
         <ul class="nav-items" id="nav-items">
-            <li class="nav-item"><span><a href="#banner">Home</a></span></li>
-            <li class="nav-item"><span><a href="#latest-news">Latest News</a></span></li>
-            <li class="nav-item"><span><a href="./archives.html">Archives</a></span></li>
-            <li class="nav-item"><span><a href="./contactus.html">Contact us</a></span></li>
+            <li class="nav-item"><span><a href="./index.html">Home</a></span></li>
+            <li class="nav-item"><span><a href="./archives.html">Articles</a></span></li>
+            <li class="nav-item"><span><a href="./testinomy.html">__Tesitmony</a></span></li>
+            <li class="nav-item"><span><a href="./contactus.html">Our staff</a></span></li>
         </ul>
     </nav>
     <div class="banner" id="banner">
         <img class="banner-img">
-        <h1 class="banner-title">Cyber News</h1>
+        <h1 class="banner-title">__Testimony</h1>
     </div>
     <div class="main-container">
         <article class="article-container" id="latest-news">
             <h1>The Dark web</h1>
-            <h3>subtile</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, commodi perspiciatis accusamus quidem deserunt aperiam tenetur earum obcaecati quis ut quo, possimus quae placeat repudiandae error et suscipit? Nihil, necessitatibus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium asperiores, numquam voluptas vitae molestias enim velit cupiditate laborum voluptate vero natus sint ut assumenda placeat est porro consequuntur distinctio cum.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, tempora. Consequatur amet, eligendi pariatur quisquam esse rerum. Alias tempore laborum, sequi dolorem non esse aliquam aliquid deleniti nobis voluptate odit?</p>
+            <h3>What is the dark web</h3>
+            <p>The dark web, a clandestine realm of the internet hidden from conventional search engines, serves as a platform with a dual nature—veiled in anonymity and often associated with illicit activities, yet harboring potential for constructive purposes. Beneath the surface of this encrypted network, individuals seek privacy and security, navigating away from traditional surveillance. While the dark web has gained notoriety for illegal transactions, it also facilitates whistleblowing and protects freedom of speech for those in oppressive regimes. Additionally, the dark web provides a space for cybersecurity professionals to exchange information on emerging threats, contributing to the enhancement of online defenses. In acknowledging its dual facets, the dark web prompts a nuanced conversation about balancing security concerns with the potential for positive, covert exchanges in the digital realm.</p>
+            <h3>Acces safely the dark web</h3>
+            <p>The dark web is actually quite easy to access on most OSs. The first step is to download the <a class="ahrefs" href="https://www.torproject.org/fr/thank-you/">Tor browser</a>. This browser will connect you to the darkweb network where your internet traffic will be encrypted.</p>
+            <p>However it does not mean that it is 100% safe. Indeed your internet traffic will remain "visible" between your device and the first tor router that performs the encryption and forward your traffic to the dark web network</p>
+            <p>You may want to add some layers of security such as :</p>
+            <ul>
+                <li>Enabeling the advanced security option in the tor browser</li>
+                <li>Using a VPN to hide your tor initial request</li>
+                <li>Surfing from a <a class="ahrefs" href="https://tails.net/install/index.fr.html">linux tail OS</a> and add the two previous layers of security</li>
+            </ul>
+            <h3>Reach out to us</h3>
+            <p>On this website you will find informations and articles about the dark web as well as informations about how to access plateforme on the dark web. Over there you will get to address your testimony in security</p>
+            <ul>
+                <li>Dark web plateforme : <span id="darkweb-link">http://eyuxmuha3lmaeiu7a3wtgjjjr7z35ibruem74ttcd22qtugxshxabjqd.onion</span></li>
+                <li>Dark web key : <span id="darkweb-link">KTGP2HBD6WHZSD6VZHQ5W432GAI7FC2ACFJ7DG75YAD35AKMF5DA</span></li>
+            </ul>    
         </article>
     </div>
     <div class="footer" id="footer">
