--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
             <p>The dark web remains a paradoxical entity within the broader internet ecosystem. On one hand, it is a bastion of privacy and a tool for positive change; on the other, it is a shadowy realm where illicit activities flourish. As technology continues to evolve, the future of the dark web hangs in a delicate balance, challenging our perceptions of privacy, security, and the role of the internet in society. How we navigate this balance will shape not just the future of the dark web, but the very essence of the internet at large.</p>   
         </article>
     </div>
-    <div class="footer" id="footer">
+    <div class="footer">
         <div class="contact-container">
-            <p>contact@testimony.ch</p>
+            <img src="img/social_img/5282541_fb_social media_facebook_facebook logo_social network_icon.png">
+            <img src="img/social_img/5282542_linkedin_network_social network_linkedin logo_icon.png">
+            <img src="img/social_img/5282544_camera_instagram_social media_social network_instagram logo_icon.png">
+            <img src="img/social_img/5282548_play_player_video_youtube_youtuble logo_icon.png">
+            <img src="img/social_img/5282551_tweet_twitter_twitter logo_icon.png">
         </div>
     </div>
     <script>
