--- a/articles.html
+++ b/articles.html
@@ -69,9 +69,13 @@
             </article>
         </div>
     </div>
-    <div class="footer" id="footer">
+    <div class="footer">
         <div class="contact-container">
-            <p>contact@testimony.ch</p>
+            <img src="img/social_img/5282541_fb_social media_facebook_facebook logo_social network_icon.png">
+            <img src="img/social_img/5282542_linkedin_network_social network_linkedin logo_icon.png">
+            <img src="img/social_img/5282544_camera_instagram_social media_social network_instagram logo_icon.png">
+            <img src="img/social_img/5282548_play_player_video_youtube_youtuble logo_icon.png">
+            <img src="img/social_img/5282551_tweet_twitter_twitter logo_icon.png">
         </div>
     </div>
 
