--- a/onionrouting.html
+++ b/onionrouting.html
@@ -63,9 +63,13 @@
             <p>Onion routing, while robust, is not without its limitations. The process can be slower than traditional internet browsing due to the multiple layers of encryption and rerouting. Additionally, while it provides anonymity, it cannot guarantee complete privacy, especially if used improperly.</p>
         </article>
     </div>
-    <div class="footer" id="footer">
+    <div class="footer">
         <div class="contact-container">
-            <p>contact@testimony.ch</p>
+            <img src="img/social_img/5282541_fb_social media_facebook_facebook logo_social network_icon.png">
+            <img src="img/social_img/5282542_linkedin_network_social network_linkedin logo_icon.png">
+            <img src="img/social_img/5282544_camera_instagram_social media_social network_instagram logo_icon.png">
+            <img src="img/social_img/5282548_play_player_video_youtube_youtuble logo_icon.png">
+            <img src="img/social_img/5282551_tweet_twitter_twitter logo_icon.png">
         </div>
     </div>
     <script>
